# bali-food-intelligence

./: .bandit  .env.example  .gitignore  .replit  1.-Data-Kunjungan-2024.xls  1.-Data-Kunjungan-2025-3.xls  ACTION_PLAN.md  ADVERTISING_ANALYSIS_FIXED.md  AI_ASSISTANT_DATA_ISSUE.md  AI_ASSISTANT_EXAMPLES.md  API_INTEGRATIONS_SUMMARY.md  API_INTEGRATION_SUCCESS_REPORT.md  API_KEY_STATUS_REPORT.md  API_SETUP_COMPLETE.md  API_SETUP_GUIDE.md  API_STATUS_FINAL.md  APP_STRUCTURE_THREE_TABS.md  ATLAS_BEACH_FEST_ANALYSIS.md  BRANCH_CLEANUP_REPORT.md  CHANGELOG.md  CHECK_ML_STATUS.md  CLIENT_DATABASE_INTEGRATION.md  CLIENT_EXPLANATION_DETECTIVE_ANALYSIS.md  CLIENT_MEETING_EXPLANATIONS.md  CLIENT_SYSTEM_READY.md  COMPARISON_ANALYSIS.md  COMPARISON_OLD_VS_NEW_REPORTS.md  COMPLETE_ANALYSIS_PARAMETERS.md  COMPLETE_CLIENT_REPORT_ONLY_EGGS.md  COMPLETE_USER_GUIDE.md  CRITICAL_ANALYSIS_UNEXPLAINED_INFLUENCE.md  CRITICAL_FILES.md  CRITICAL_FIXES_APPLIED.md  CURRENT_DATA_AUDIT_REPORT.md  DATABASE_UPDATE_GUIDE.md  DATA_ACCURACY_GUARANTEE.md  DATA_FIELDS_USED.md  DEMO_ML_REPORT_ONLY_EGGS.md  DEMO_REPORT_IKA_CANGGU.md  DEMO_SUMMARY.md  (+263 more)
api_integrations/: __init__.py  ai_explainer.py  client_database_api.py  holiday_service.py  master_integrator.py  weather_service.py
backup_ml_20250809_175202/: install_ml.py  ml_full_database_analysis.py  proper_ml_detective_analysis.py
data/: Kunjungan_Wisatawan_Bali_2024.xls  Kunjungan_Wisatawan_Bali_2025.xls  README.md  bali_restaurant_locations.json  comprehensive_holiday_analysis.json  enhanced_holidays.json  fake_orders_data.json  mega_weather_analysis.json  real_holiday_impact_analysis.json  tourism_index.json
docs/: AI_TESTING_REPORT.md  API_SETUP_GUIDE.md  HOLIDAY_ANALYSIS_METHODOLOGY.md  OPTIMIZED_INTERFACE.md  README.md  REPLIT_DEPLOYMENT.md  WEB_DEPLOYMENT.md
legacy/: README.md  main_replit.py
main/: .flake8  COMPREHENSIVE_TESTING_REPORT.md  Dockerfile  ENHANCED_SYSTEM_COMPLETE.md  FINAL_STATUS_REPORT.md  MODEL_CAPABILITIES_REPORT.md  README.md  RETRAINING_INSTRUCTIONS.md  RETRAINING_SUCCESS_REPORT.md  __init__.py  advanced_analytics.py  business_intelligence_system.py  check_database_compatibility.py  config.py  data_adapter.py  data_integration.py  data_loader.py  data_loader_enhanced.py  docker-compose.yml  enhanced_analytics.py  enhanced_report_generator.py  feature_engineering.py  feature_engineering_enhanced.py  feature_engineering_fixed.py  field_compatibility.py  integrated_system.py  intelligent_anomaly_detector.py  main.py  model.py  openai_analytics.py  performance_check.py  period_comparison_analyzer.py  report_generator.py  requirements-dev.txt  requirements.txt  retrain_model.py  setup.py  shap_analysis.py  unified_market_analyzer.py  unified_restaurant_analyzer.py  (+2 more)
models/: client_model_metadata.json  global_sales_rf_features.json  global_sales_rf_metrics.json
reports/: Ika_Canggu_2025-05.txt  Only_Eggs_2025-04-01_2025-05-31.txt  detailed_analysis_Ika_Kero_20250815_052546.txt  detailed_analysis_Ika_Kero_20250815_054223.txt  detailed_analysis_Ika_Kero_20250815_062358.txt  detailed_analysis_Ika_Kero_20250815_065901.txt  detailed_analysis_Ika_Kero_20250815_072108.txt  detailed_analysis_Ika_Kero_20250815_074244.txt  detailed_analysis_Ika_Kero_20250815_110700.txt  detailed_analysis_Ika_Kero_20250815_112946.txt  detailed_analysis_Ika_Kero_20250815_123241.txt  detailed_analysis_Only_Eggs_20250811_055200.txt  detailed_analysis_Only_Eggs_20250811_070721.txt  detailed_analysis_Only_Eggs_20250815_050659.txt  detailed_analysis_Only_Eggs_20250815_051356.txt  detailed_analysis_Only_Eggs_20250815_051549.txt  detailed_analysis_Only_Eggs_20250815_051749.txt  detailed_analysis_Only_Eggs_20250815_051946.txt  detailed_analysis_Only_Eggs_20250815_072002.txt  detailed_analysis_Only_Eggs_20250815_074138.txt  detailed_analysis_Only_Eggs_20250815_075727.txt  detailed_analysis_Only_Kebab_20250815_081803.txt  detailed_analysis_Only_Kebab_20250815_085315.txt  detailed_analysis_Only_Kebab_20250815_104542.txt  detailed_analysis_Only_Kebab_20250815_105829.txt  detailed_analysis_Only_Kebab_20250815_132042.txt  detailed_analysis_Prana_20250815_133856.txt  detailed_analysis_Prana_20250815_143718.txt
scripts/: README.md  analyze_2024_detailed.py  analyze_database.py  build_weather_cache.py  generate_report.py  setup_database.py  test_apis.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_analyzers.py  test_feature_engineering.py  test_model.py
(+49 files in other folders)
